--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,5 @@
-absl-py==2.1.0
-appnope==0.1.4
-asttokens==2.4.1
-astunparse==1.6.3
-certifi==2024.8.30
-charset-normalizer==3.4.0
-comm==0.2.2
-debugpy==1.8.7
-decorator==5.1.1
-executing==2.1.0
-filelock==3.16.1
-flatbuffers==24.3.25
-fsspec==2024.9.0
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.66.2
-h5py==3.12.1
-idna==3.10
-ipykernel==6.29.5
-ipython==8.28.0
-jedi==0.19.1
-Jinja2==3.1.4
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-keras==3.6.0
-libclang==18.1.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-ml-dtypes==0.4.1
-monai==1.3.2
-mpmath==1.3.0
-namex==0.0.8
-nest-asyncio==1.6.0
-networkx==3.4
-numpy==1.26.4
-opt_einsum==3.4.0
-optree==0.13.0
-packaging==24.1
-pandas==2.2.3
-parso==0.8.4
-pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.48
-protobuf==4.25.5
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-Pygments==2.18.0
-pylibjpeg==2.0.1
-pylibjpeg-libjpeg==2.2.0
-pylibjpeg-openjpeg==2.3.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-pyzmq==26.2.0
-requests==2.32.3
-rich==13.9.2
-setuptools==75.1.0
-six==1.16.0
-stack-data==0.6.3
-sympy==1.13.3
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-termcolor==2.5.0
-torch==2.4.1
-tornado==6.4.1
-tqdm==4.66.5
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-wcwidth==0.2.13
-Werkzeug==3.0.4
-wheel==0.44.0
-wrapt==1.16.0
+joblib==1.4.2
+numpy==2.1.2
+scikit-learn==1.5.2
+scipy==1.14.1
+threadpoolctl==3.5.0
