--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==3.0.3
 gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
 MarkupSafe==3.0.1
 packaging==24.1
 Werkzeug==3.0.4
